--- a/front-end/src/Styles/login.css
+++ b/front-end/src/Styles/login.css
@@ -60,6 +60,7 @@ background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
     width: 100%;
     font-size: 16px;
     transition: background-color 0.3s ease;
+    margin-bottom: 15px;
   }
   
   .login-button:hover {
@@ -85,7 +86,12 @@ background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
     color: #007bff;
     outline: none; 
   }
+  .signup-link {
+    cursor: pointer;
+    color: #007bff;
+    
   
+  }
   @media (max-width: 768px) {
     .login-form {
       padding: 20px;
