--- a/front-end/src/Styles/AddNotes.css
+++ b/front-end/src/Styles/AddNotes.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding: 40px;
     background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-    height: auto
+    /* height: auto */
   }
   
   .notes-form {
@@ -72,4 +72,4 @@
     font-size: 12px;
     color: #888;
   }
-  
+ 
