--- a/front-end/src/Styles/NoNotes.css
+++ b/front-end/src/Styles/NoNotes.css
@@ -1,33 +1,27 @@
-.no-notes-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height:auto;
-   
 
-  }
-  
-  .no-notes-content {
-    text-align: center;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f5f5f5;
-    margin-top: -200px;
-  }
-  
-  .create-note-button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-top: 20px;
-  }
-  
-  .create-note-button:hover {
-    background-color: #0056b3;
-  }
+.no-notes-container {
+   min-height: 100vh;  
+   padding: 20px;
+}
+.no-notes-content{
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  text-align: center;
+}
+.create-note-button{
+
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 12px 20px;
+  cursor: pointer;
+  /* width: 100%; */
+  font-size: 16px;
+  margin-top: 18px;
+  transition: background-color 0.3s ease;
+}
+.no-notes-content h2{
+  font-weight: 600;
+}
