--- a/front-end/src/Styles/login.css
+++ b/front-end/src/Styles/login.css
@@ -50,7 +50,7 @@ background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
     color: #222121;
   }
   
-  .login-button {
+  .login-button , .delete-button {
     background-color: #007bff;
     color: white;
     border: none;
@@ -63,7 +63,7 @@ background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
     margin-bottom: 15px;
   }
   
-  .login-button:hover {
+  .login-button:hover ,.delete-button:hover{
     background-color: #0056b3;
   }
   .password-input {
